--- a/views/app.pug
+++ b/views/app.pug
@@ -1,5 +1,5 @@
 div#title.mdl-grid(style="display:none")
-    h1 Hippy Mood 2
+    h1 Hippy Mood 
 include ./includes/about.pug
 div#app.mdl-grid(style="display:none")
     div.mdl-tabs.mdl-js-tabs.mdl-js-ripple-effect
