--- a/views/includes/intro.pug
+++ b/views/includes/intro.pug
@@ -1,5 +1,4 @@
 div#intro
     h1 Hippy Mood
-    p Un site pour écouter de la musique selon ta "mood"
-    p C'est comme une boite de chocolat, tant que t'as pas essayé tu ne sais pas! </br> Des fois tu reviens, des fois pas...
+    p Get'it Spicy Dude !
     div#appLoadSpinner.mdl-spinner.mdl-js-spinner.is-active
