Audiovue and comments

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,11 @@
 html
     head
-        title HippyMood
-        style
+        title Hippy Mood
+        style 
             include ../public/css/intro.css
     body
         include ./includes/intro.pug
         script
             include ../public/js/intro.js
         div#appData
+        canvas#canvas
